--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,7 @@ a{
     grid-template-rows: auto;
     gap: 10px; 
     padding: 10px;
+    padding-bottom: 100px;
 }
 
 .sobremi-card{
@@ -185,6 +186,21 @@ a{
 
 .sobremi-card h3, p{
     color: #000;
+}
+
+.map-container {
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    border: 2px solid #808080;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+iframe {
+    width: 100%;
+    height: 450px;
+    border: 0;
 }
 
 .habilidades{
@@ -222,6 +238,7 @@ a{
     grid-template-rows: auto;
     gap: 100px; 
     padding: 10px;
+    padding-bottom: 50px;
 }
 
 .barra{
@@ -239,6 +256,7 @@ a{
     position: absolute;
     height: 100%;
     background-color: #8c00ff;
+    transition: width 2s ease;
 }
 
 .html-item{
@@ -255,6 +273,24 @@ a{
 
 .javascript-item{
     width: 80%;
+}
+
+.video-container {
+    position: relative;
+    margin: auto;
+    overflow: hidden;
+    padding-top: 56.25%;
+    border: 4px solid #940253;
+    border-radius: 15px;
+}
+
+.video-container iframe, .video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
 }
 
 .resumen{
@@ -319,6 +355,7 @@ a{
 
 .contacto-contenido h3{
     padding-top: 20px;
+    text-align: center;
 }
 
 .grid-micontacto{
@@ -327,4 +364,65 @@ a{
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
     gap: 10px; 
+    padding-bottom: 50px;
+}
+
+.form-container {
+    width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(255, 0, 0, 0.329);
+    border: #940253 solid;
+}
+
+.form-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #e6e6e6;
+}
+
+.form-container label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #e6e6e6;
+}
+
+.form-container input[type="text"],
+.form-container textarea,
+.form-container input[type="email"],
+.form-container input[type="date"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    box-sizing: border-box;
+    transition: all 0.3s ease;
+}
+
+
+.form-container input[type="text"]:focus,
+.form-container input[type="email"]:focus,
+.form-container input[type="date"]:focus {
+    border-color: #0073e6;
+    outline: none;
+    box-shadow: 0px 0px 5px rgba(0, 115, 230, 0.3);
+}
+
+.form-container button {
+    width: 100%;
+    padding: 10px;
+    background-color: #0073e6;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.form-container button:hover {
+    background-color: #005bb5;
 }
